# token-2022-SmartContract

./: Anchor.toml  README.md
programs/token2022-amm/: Cargo.toml
programs/token2022-amm/src/: lib.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
src/components/: WhitelistManagement.tsx
tests/: token2022-amm-hackathon.ts
